--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn JS</title>
-       <script src="./script.js" defer></script>
-  </head>
-  <body>
-   
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Усложненные задания</title>
+  <script src="./script.js" defer></script>
+</head>
+<body>
+  
+</body>
 </html>
